[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/GameSystem/ProgressBarScoreUI.gd" type="Script" id=1]
[ext_resource path="res://UI/GameSystem/ScoreUIConfigPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Icons/ModernLandscapeLab/fill.svg" type="Texture2D" id=3]
[ext_resource path="res://Resources/Icons/ModernLandscapeLab/outline.svg" type="Texture2D" id=4]

[node name="ScoreUI" type="VBoxContainer"]
offset_right = 50.0
offset_bottom = 174.0
script = ExtResource( 1 )

[node name="ProgressBar" type="TextureProgressBar" parent="."]
offset_right = 50.0
offset_bottom = 100.0
minimum_size = Vector2( 50, 100 )
size_flags_horizontal = 6
size_flags_vertical = 3
value = 90.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
fill_mode = 3
tint_progress = Color( 0.690196, 0.690196, 0.690196, 1 )
nine_patch_stretch = true

[node name="VBoxContainer" type="HBoxContainer" parent="."]
offset_top = 108.0
offset_right = 50.0
offset_bottom = 133.0

[node name="CurrentValue" type="Label" parent="VBoxContainer"]
offset_bottom = 25.0
align = 1

[node name="ValueSeparator" type="Label" parent="VBoxContainer"]
offset_left = 8.0
offset_right = 29.0
offset_bottom = 25.0
text = " / "
align = 1

[node name="MaxValue" type="Label" parent="VBoxContainer"]
offset_left = 37.0
offset_right = 37.0
offset_bottom = 25.0
align = 1

[node name="Name" type="Label" parent="."]
offset_top = 141.0
offset_right = 50.0
offset_bottom = 166.0
align = 1

[node name="AdditionalInfo" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 174.0
offset_right = 50.0
offset_bottom = 193.0
